[package]
name = "warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="1", features=["full"]}
diesel={version="1.4.8", features=["postgres","uuidv07","r2d2","chrono"]}
uuid={version="0.8.2", features=["serde","v4"]}
chrono={version="0.4.19", features=["serde"]}
serde={version="1.0.133", features=["derive"]}
warp="0.3.2"
dotenv="0.15.0"